--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,13 +1,47 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+}
+
+:root {
+  --color-1: rgb(5, 55, 85);
+  --color-1a: rgba(40, 80, 100, 0.75);
+  --color-1b: rgba(40, 80, 100, 0.5);
+  --color-1c: rgba(5, 55, 85, 0.25);
+  --color-1d: rgba(5, 55, 85, 0.05);
+  --color-2: rgb(250, 175, 60);
+  --color-2a: rgba(250, 175, 60, 0.75);
+  --color-2b: rgba(250, 175, 60, 0.5);
+  --color-2c: rgba(250, 175, 60, 0.25);
+  --color-2d: rgba(250, 175, 60, 0.05);
+}
+
+html,
+body {
+  width: 100%;
+  background-color: #ececec;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+/* disable screen rotation */
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
 }
