--- a/client/src/components/MovieCard.scss
+++ b/client/src/components/MovieCard.scss
@@ -1,39 +1,111 @@
 .movie-card {
   --movie-card-gradient-color-01: var(--color-1);
   --movie-card-gradient-color-02: var(--color-1c);
-  --movie-card-text-color: var(--color-2);
+  --movie-card-overlay-text-color: white;
+  --movie-card-placeholder-text-color: var(--color-2);
 
-    max-width: 100%;
-    max-height: 100%;
-    box-sizing: border-box;
-    margin: 0.5rem;
-    transition: transform 0.3s ease-out;
+  position: relative;
+  max-width: 100%;
+  max-height: 100%;
+  box-sizing: border-box;
+  margin: 0.5rem;
+  overflow: hidden;
+  transition: transform 0.3s ease-out;
 
-    &:hover {
-        transform: scale(1.08);
+  &:hover {
+    // background-size: 150%;
+
+    & .movie-card-img {
+      transform: scale(1.1);
     }
 
-    &:active {
-        transform: scale(0.95);
+    & .movie-content-overlay {
+      opacity: 1;
+      pointer-events: all;
+
+      & .title, & .date, & .rating {
+        opacity: 1;
+      }
+
+      & .title, & .date {
+        transform: translateY(0);
+      }
+
+      & .rating {
+        transform: translateX(0) rotate(0deg);
+      }
     }
+  }
+
+  &:active {
+    transform: scale(0.95);
+    opacity: 0.9;
+  }
 }
 
 .movie-card-img {
-    width: 100%;
+  width: 100%;
+  transition: transform 0.5s ease;
 }
 
 .movie-card-placeholder {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem 1rem;
-    background: radial-gradient(var(--movie-card-gradient-color-01), var(--movie-card-gradient-color-02));
-    color: var(--movie-card-text-color);
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 1rem;
+  background: radial-gradient(
+    var(--movie-card-gradient-color-01),
+    var(--movie-card-gradient-color-02)
+  );
+  color: var(--movie-card-placeholder-text-color);
 
-    & p {
-        text-align: center;
-    }
+  & p {
+    text-align: center;
+  }
+}
+
+.movie-content-overlay {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5rem;
+  background: linear-gradient(to bottom, rgba(88, 58, 58, 0.65) 0%, rgba(0, 0, 0, 0.95) 100%);
+  color: var(--movie-card-overlay-text-color);
+  text-align: center;
+  pointer-events: none;
+  overflow: hidden;
+  opacity: 0;
+  transition: opacity 0.125s ease;
+
+  .title {
+    font-size: 1.5rem;
+    font-weight: 200;
+    opacity: 0;
+    transform: translateY(-3rem);
+    transition: transform 0.25s ease, opacity 0.25s ease;
+  }
+
+  .date {
+    margin-top: 1rem;
+    font-size: 1rem;
+    font-weight: 500;
+    opacity: 0;
+    transform: translateY(2rem);
+    transition: transform 0.25s ease 0.125s, opacity 0.25s ease 0.125s;
+  }
+
+  .rating {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    opacity: 0;
+    transform: translateX(-11rem) rotate(-720deg);
+    transition: transform 0.4s ease 0.2s, opacity 0.4s ease 0.2s;
+  }
 }
