Add favorite icon to movie card

--- a/client/src/components/MovieCard.scss
+++ b/client/src/components/MovieCard.scss
@@ -23,16 +23,24 @@
       opacity: 1;
       pointer-events: all;
 
-      & .title, & .date, & .rating {
+      & .rating,
+      & .title,
+      & .date,
+      & .favorite {
         opacity: 1;
-      }
-
-      & .title, & .date {
-        transform: translateY(0);
       }
 
       & .rating {
         transform: translateX(0) rotate(0deg);
+      }
+
+      & .title,
+      & .date {
+        transform: translateY(0);
+      }
+
+      & .favorite svg {
+        animation: heartBeat 1s linear infinite;
       }
     }
   }
@@ -83,6 +91,15 @@
   opacity: 0;
   transition: opacity 0.125s ease;
 
+  .rating {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    opacity: 0;
+    transform: translateX(11rem) rotate(720deg);
+    transition: transform 0.4s ease 0.2s, opacity 0.4s ease 0.2s;
+  }
+
   .title {
     font-size: 1.5rem;
     font-weight: 200;
@@ -100,12 +117,32 @@
     transition: transform 0.25s ease 0.125s, opacity 0.25s ease 0.125s;
   }
 
-  .rating {
+  .favorite {
     position: absolute;
-    top: 1rem;
+    bottom: 1rem;
     right: 1rem;
+    height: 2.5rem;
+    width: 2.5rem;
+    color: red;
     opacity: 0;
-    transform: translateX(-11rem) rotate(-720deg);
-    transition: transform 0.4s ease 0.2s, opacity 0.4s ease 0.2s;
+    transition: transform 0.4s ease 0.3s, opacity 0.4s ease 0.3s;
+  }
+}
+
+@keyframes heartBeat {
+  0% {
+    transform: scale(0.8);
+  }
+  25% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  75% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.8);
   }
 }
