--- a/client/src/components/MovieBoard.scss
+++ b/client/src/components/MovieBoard.scss
@@ -1,24 +1,27 @@
 .movie-board {
   padding: 1rem;
   max-width: 100%;
-  display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  // display: grid;
+  // grid-gap: 1rem;
+  // grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 
-  @media only screen and (max-width: 1200px) {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
+  // @media only screen and (max-width: 1200px) {
+  //   grid-template-columns: 1fr 1fr 1fr 1fr;
+  // }
 
-  @media only screen and (max-width: 960px) {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
+  // @media only screen and (max-width: 960px) {
+  //   grid-template-columns: 1fr 1fr 1fr;
+  // }
 
-  @media only screen and (max-width: 600px) {
-    padding: 0.5rem;
-    grid-template-columns: 1fr 1fr;
-  }
+  // @media only screen and (max-width: 600px) {
+  //   padding: 0.5rem;
+  //   grid-template-columns: 1fr 1fr;
+  // }
 
-  @media only screen and (max-width: 300px) {
-    grid-template-columns: 1fr;
-  }
+  // @media only screen and (max-width: 300px) {
+  //   grid-template-columns: 1fr;
+  // }
 }
