--- a/client/src/components/MovieCard.scss
+++ b/client/src/components/MovieCard.scss
@@ -3,57 +3,55 @@
   --movie-card-gradient-color-02: var(--color-1c);
   --movie-card-overlay-text-color: white;
   --movie-card-placeholder-text-color: var(--color-2);
+  --movie-card-padding: 1rem;
 
   position: relative;
-  max-width: 100%;
-  max-height: 100%;
+  height: 33rem;
+  width: 22rem;
   box-sizing: border-box;
-  margin: 0.5rem;
-  overflow: hidden;
-  transition: transform 0.3s ease-out;
+  padding: var(--movie-card-padding);
 
-  &:hover {
-    // background-size: 150%;
+  &-content {
+    position: relative;
+    height: 100%;
+    display: block;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
+    transition: background-size 0.3s ease-out;
 
-    & .movie-card-img {
-      transform: scale(1.1);
-    }
-
-    & .movie-content-overlay {
-      opacity: 1;
-      pointer-events: all;
-
-      & .rating,
-      & .title,
-      & .date,
-      & .favorite {
+    &:hover {
+      & .movie-content-overlay {
         opacity: 1;
-      }
+        pointer-events: all;
 
-      & .rating {
-        transform: translateX(0) rotate(0deg);
-      }
+        & .rating,
+        & .title,
+        & .date,
+        & .favorite {
+          opacity: 1;
+        }
 
-      & .title,
-      & .date {
-        transform: translateY(0);
-      }
+        & .rating {
+          transform: translateX(0) rotate(0deg);
+        }
 
-      & .favorite svg {
-        animation: heartBeat 1s linear infinite;
+        & .title,
+        & .date {
+          transform: translateY(0);
+        }
+
+        & .favorite svg {
+          animation: heartBeat 1s linear infinite;
+        }
       }
     }
-  }
 
-  &:active {
-    transform: scale(0.95);
-    opacity: 0.9;
+    &:active {
+      transform: scale(0.95);
+      opacity: 0.9;
+    }
   }
-}
-
-.movie-card-img {
-  width: 100%;
-  transition: transform 0.5s ease;
 }
 
 .movie-card-placeholder {
@@ -87,6 +85,7 @@
   color: var(--movie-card-overlay-text-color);
   text-align: center;
   pointer-events: none;
+  user-select: none;
   overflow: hidden;
   opacity: 0;
   transition: opacity 0.125s ease;
