--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -24,7 +24,11 @@ body {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  background-color: #101010;
+  font-family: Oswald, sans-serif;
+  // font-family: "Poppins", sans-serif;
+  // font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
