--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -16,6 +16,7 @@
   --color-2c: rgba(250, 175, 60, 0.25);
   --color-2d: rgba(250, 175, 60, 0.05);
   --color-dark: rgba(15, 15, 15, 1);
+  --color-light: white;
 }
 
 html,
