--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -1,14 +1,7 @@
-.app {
-  min-height: 100vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
+.app {}
 
 .main {
   width: 100%;
-  max-width: 100%;
   margin: 0 auto;
   overflow: hidden;
-  flex-grow: 1;
 }
