--- a/client/src/components/common/SearchBar.scss
+++ b/client/src/components/common/SearchBar.scss
@@ -1,11 +1,10 @@
 .searchbar-form {
   --searchbar-background-color: var(--color-1);
-  --searchbar-line-color-idle: var(--color-2b);
-  --searchbar-line-color-active: var(--color-2);
+  --searchbar-content-color-idle: var(--color-light);
+  --searchbar-content-rgb-active: 250, 175, 60;
+  --searchbar-border-radius: var(--border-radius);
 
   display: flex;
-  justify-content: center;
-  min-width: 10rem;
 }
 
 .searchbar-label {
@@ -13,66 +12,92 @@
   margin: 0 auto;
   display: flex;
   align-items: center;
+  flex: 1 1 auto;
   padding: 0;
   overflow: hidden;
-  opacity: 0.75;
 }
 
 .searchbar-input {
-  height: 2rem;
-  width: 25vw;
-  min-width: 10rem;
-  border: 2px solid var(--searchbar-line-color-idle);
-  border-radius: 2rem;
-  padding: 0.2rem 2rem;
+  position: relative;
+  height: 100%;
+  width: calc(1rem + 1.5rem + 1rem); // padding left, size of icon, padding right
+  border: none;
+  border-radius: var(--searchbar-border-radius);
+  padding: 0;
   background-color: transparent;
-  color: white;
   font-size: 1rem;
   text-align: center;
-  transition: all 0.3s ease-in-out;
-}
+  transition: all 0.5s ease-in-out;
 
-.searchbar-input::placeholder {
-  margin: 0 auto;
-}
-
-.searchbar-label svg {
-  position: absolute;
-  left: 0.5rem;
-  height: 1.5rem;
-  width: 1.5rem;
-  margin-right: 1rem;
-  fill: var(--searchbar-line-color-idle);
-  transform: translateY(5%);
-}
-
-.searchbar-input:focus {
-  width: 50vw;
-  outline: none;
-  border: 2px solid var(--searchbar-line-color-active);
-}
-
-.searchbar-input:focus + svg {
-  fill: var(--searchbar-line-color-active);
-}
-
-@media only screen and (max-width: 500px) {
-  .searchbar-label {
+  & + svg {
+    position: absolute;
     height: 1.5rem;
+    width: 1.5rem;
+    margin: 0 1rem;
+    fill: var(--searchbar-content-color-idle);
+    transform: translateY(5%);
+    transition: all 0.3s ease;
   }
 
-  .searchbar-label svg {
-    height: 1.25rem;
-    width: 1.25rem;
+  &::placeholder {
+    width: 0;
+    color: var(--searchbar-content-color-idle);
+    opacity: 0;
+    transition: opacity 0.2s ease 0.3s;
   }
 
-  .searchbar-input {
-    height: 1.5rem;
-    border: 1px solid var(--searchbar-line-color-idle);
-    font-size: 0.9rem;
+  &::-webkit-search-cancel-button {
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s ease 0.3s;
   }
 
-  .searchbar-input:focus {
-    width: 80vw;
+  &:focus,
+  &.active {
+    width: calc(1rem + 1.5rem + 1rem + 18rem + 1rem);
+    padding: 0 1rem 0 calc(1rem + 1.5rem + 1rem);
+    outline: none;
+    color: rgb(var(--searchbar-content-rgb-active));
+    background-color: rgba(var(--searchbar-content-rgb-active), 0.2);
+
+    &::placeholder {
+      width: auto;
+      margin: 0 auto;
+      color: rgb(var(--searchbar-content-rgb-active));
+      opacity: 1;
+    }
+
+    &::-webkit-search-cancel-button {
+      height: 1rem;
+      width: 1rem;
+      pointer-events: all;
+      cursor: pointer;
+      opacity: 1;
+      filter: invert(100%);
+    }
+
+    & + svg {
+      fill: rgb(var(--searchbar-content-rgb-active));
+    }
   }
 }
+
+// @media only screen and (max-width: 500px) {
+//   .searchbar-label {
+//     height: 1.5rem;
+//   }
+
+//   .searchbar-label svg {
+//     height: 1.25rem;
+//     width: 1.25rem;
+//   }
+
+//   .searchbar-input {
+//     height: 1.5rem;
+//     font-size: 0.9rem;
+//   }
+
+//   .searchbar-input:focus {
+//     width: 80vw;
+//   }
+// }
