Movie list page: category tabs and search

--- a/client/src/components/MovieCategoryTab.scss
+++ b/client/src/components/MovieCategoryTab.scss
@@ -1,6 +1,6 @@
 .tab {
   --tab-text-color-idle: var(--color-light);
-  --tab-border-radius: var(--border-radius);
+  --tab-border-radius: var(--movie-list-border-radius);
 
   width: auto;
   position: relative;
