--- a/client/src/components/common/SearchBar.scss
+++ b/client/src/components/common/SearchBar.scss
@@ -2,7 +2,7 @@
   --searchbar-background-color: var(--color-1);
   --searchbar-content-color-idle: var(--color-light);
   --searchbar-content-rgb-active: 250, 175, 60;
-  --searchbar-border-radius: var(--border-radius);
+  --searchbar-border-radius: var(--movie-list-border-radius);
 
   display: flex;
 }
