--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -23,7 +23,7 @@
   // --color-dark: rgba(15, 15, 15, 1);
   // --color-dark: rgb(15, 25, 35);
   --color-dark: rgb(10, 15, 25);
-  --color-light: rgba(255, 255, 255, 0.8);
+  --color-light: rgb(230, 230, 230);
   --rgb-dark: 10, 15, 25;
   --rgb-light: 230, 230, 230
 }
