--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -24,8 +24,10 @@
   // --color-dark: rgb(15, 25, 35);
   --color-dark: rgb(10, 15, 25);
   --color-light: rgb(230, 230, 230);
+  --color-primary: rgb(100, 166, 200);
   --rgb-dark: 10, 15, 25;
-  --rgb-light: 230, 230, 230
+  --rgb-light: 230, 230, 230;
+  --rgb-primary: 100, 166, 200;
 }
 
 html,
