--- a/client/src/components/MovieCard.scss
+++ b/client/src/components/MovieCard.scss
@@ -1,8 +1,6 @@
 .movie-card {
-  --movie-card-gradient-color-01: var(--color-1);
-  --movie-card-gradient-color-02: var(--color-1c);
-  --movie-card-overlay-text-color: white;
-  --movie-card-placeholder-text-color: var(--color-2);
+  --movie-card-overlay-text-color: var(--color-light);
+  --movie-card-placeholder-text-color: var(--color-secondary);
   --movie-card-padding: 1rem;
 
   position: relative;
@@ -21,6 +19,10 @@
     transition: background-size 0.3s ease-out;
 
     &:hover {
+      & .movie-card-placeholder p {
+        opacity: 0;
+      }
+
       & .movie-content-overlay {
         opacity: 1;
         pointer-events: all;
@@ -74,14 +76,13 @@
   justify-content: center;
   align-items: center;
   padding: 2rem 1rem;
-  background: radial-gradient(
-    var(--movie-card-gradient-color-01),
-    var(--movie-card-gradient-color-02)
-  );
+  border: 1px solid var(--movie-card-placeholder-text-color);
   color: var(--movie-card-placeholder-text-color);
 
   & p {
     text-align: center;
+    opacity: 1;
+    transition: opacity 0.2s ease-in-out;
   }
 }
 
