--- a/client/src/components/pages/PageContainer.scss
+++ b/client/src/components/pages/PageContainer.scss
@@ -4,7 +4,8 @@
   --page-background-color: rgb(var(--page-background-rgb));
   --page-text-color: rgb(var(--page-text-rgb));
 
-  min-height: 100vh;
+  height: 100vh;
+  overflow-y: auto;
   text-align: center;
   color: var(--page-text-color);
 }
