--- a/client/src/components/FilmStrip.scss
+++ b/client/src/components/FilmStrip.scss
@@ -1,14 +1,12 @@
 .filmstrip {
-  --filmstrip-background-color: var(--color-2);
-  --filmstrip-perforation-color: var(--color-1);
-  --filmstrip-frame-background-color: var(--color-1);
-  --filmstrip-blank-frame-background-color: var(--color-1a);
-  --filmstrip-frame-border-color: var(--color-1);
-  --filmstrip-text-color: var(--color-2);
+  // filter generator:
+  // https://codepen.io/sosuke/pen/Pjoqqp
+  // --filmstrip-icon-filter: invert(88%) sepia(18%) saturate(3820%) hue-rotate(328deg) brightness(100%) contrast(97%);
+  --filmstrip-icon-filter: invert(69%) sepia(13%) saturate(1296%) hue-rotate(156deg) brightness(88%) contrast(89%);
+  --filmstrip-color: var(--color-primary);
 
-  background-color: var(--filmstrip-background-color);
-  height: 5vh;
-  width: 30vh;
+  height: 40px;
+  width: 240px;
   overflow: hidden;
 }
 
@@ -18,46 +16,43 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 0.25vh 0;
+  padding: 0;
   animation: filmroll 8s linear infinite;
 }
 
 .filmstrip-perforations {
   width: 100%;
-  height: 0.4vh;
-  background-image: linear-gradient(to right, var(--filmstrip-perforation-color) 50%, transparent 0%);
-  background-size: 1vh;
+  height: 5px;
+  border-top: 1px solid var(--filmstrip-color);
+  border-bottom: 1px solid var(--filmstrip-color);
+  background-image: repeating-linear-gradient(to right, var(--filmstrip-color) 0%, var(--filmstrip-color) 1px, transparent 2px, transparent 5px);
+  background-size: 5px;
   background-repeat: repeat-x;
 }
 
 .filmstrip-content {
   display: flex;
-  height: 3vh;
-  margin: 0.2vh 0;
+  height: 30px;
+  margin: 0;
 }
 
 .filmstrip-frame {
-  width: 6vh;
-  height: 3vh;
+  width: 40px;
+  height: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
-  /* flex: 1; */
-  margin: 0 0.5%;
-  background-color: var(--filmstrip-frame-background-color);
-  color: var(--filmstrip-text-color);
-  font-size: 1.5vh;
-}
-
-.filmstrip-frame.blank-frame {
-  // border: 1px solid var(--filmstrip-frame-border-color);
-  // background-color: var(--filmstrip-blank-frame-background-color);
+  margin: 0;
+  color: var(--filmstrip-color);
+  border-right: 1px solid var(--filmstrip-color);
+  font-size: 11px;
+  font-weight: 500;
 }
 
 .filmstrip-frame img {
   width: 50%;
-  filter: invert(88%) sepia(18%) saturate(3820%) hue-rotate(328deg) brightness(100%) contrast(97%);
+  filter: var(--filmstrip-icon-filter);
 }
 
 @keyframes filmroll {
