--- a/client/src/components/Header.scss
+++ b/client/src/components/Header.scss
@@ -7,18 +7,15 @@
   left: 0;
   display: grid;
   grid-template-columns: fit-content(250px) auto fit-content(4rem);
-  padding: 1rem 2rem;
+  padding: 0.75rem 1.5rem;
   box-sizing: border-box;
   z-index: 5;
 
   &::before {
     content: '';
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 8rem;
-    background: linear-gradient(to bottom, rgba(var(--header-background-rgb), 1) 0%, rgba(var(--header-background-rgb), 0.2) 80%, transparent 100%);
+    inset: 0;
+    background: linear-gradient(to bottom, rgba(var(--header-background-rgb), 1) 0%, rgba(var(--header-background-rgb), 0.2) 90%, transparent 100%);
     z-index: 0;
   }
 }
