--- a/client/src/components/Logo.scss
+++ b/client/src/components/Logo.scss
@@ -1,15 +1,13 @@
 .logo {
-  opacity: 0.5;
-}
-
-.logo-link {
+  display: flex;
+  align-items: center;
   text-decoration: none;
 }
 
-@media only screen and (max-width: 750px) {
-  .logo {
-    position: absolute;
-    top: 4vmin;
-    z-index: 2;
-  }
-}
+// @media only screen and (max-width: 750px) {
+//   .logo {
+//     position: absolute;
+//     top: 4vmin;
+//     z-index: 2;
+//   }
+// }
