Create modal component

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -26,10 +26,12 @@
   --color-light: rgb(230, 230, 230);
   --color-primary: rgb(100, 166, 200);
   --color-secondary: rgb(250, 175, 60);
+  --color-accent: rgb(190, 5, 185);
   --rgb-dark: 10, 15, 25;
   --rgb-light: 230, 230, 230;
   --rgb-primary: 100, 166, 200;
   --rgb-secondary: 250, 175, 60;
+  --rgb-accent: 190, 5, 185;
 }
 
 html,
