--- a/client/src/components/MovieCard.scss
+++ b/client/src/components/MovieCard.scss
@@ -1,22 +1,72 @@
 .movie-card {
-  --movie-card-overlay-text-color: var(--color-light);
-  --movie-card-placeholder-text-color: var(--color-secondary);
+  --rgb-black: 0, 0, 0;
+  --movie-card-rgb-dark: var(--rgb-dark, --rgb-black);
+  --movie-card-color-dark: rgb(var(--movie-card-rgb-dark));
+  --rgb-white: 255, 255, 255;
+  --movie-card-rgb-light: var(--rgb-light, --rgb-white);
+  --movie-card-color-light: rgb(var(--movie-card-rgb-light));
+  --movie-card-rgb-primary: var(--rgb-primary, --rgb-black);
+  --movie-card-color-primary: rgb(var(--movie-card-rgb-primary));
+
+  --movie-card-overlay-background: rgba(var(--movie-card-rgb-dark), 0.9);
+  --movie-card-gradient-color-01: var(--movie-card-color-dark);
+  --movie-card-gradient-color-02: rgba(var(--movie-card-rgb-dark), 0.25);
+  --movie-card-overlay-text-color: var(--movie-card-color-light);
+  --movie-card-overlay-contrast-color: var(--movie-card-color-dark);
+  --movie-card-placeholder-text-color: var(--movie-card-color-primary);
   --movie-card-padding: 1rem;
 
   position: relative;
-  height: 512px;
-  width: 352px;
   box-sizing: border-box;
   padding: var(--movie-card-padding);
+
+  &.portrait {
+    height: 512px;
+    width: 352px;
+
+    .rating {
+      top: 1.25rem;
+      left: 1.25rem;
+    }
+
+    .title {
+      font-size: 1.5rem;
+    }
+
+    .date {
+      margin-top: 1rem;
+      font-size: 1rem;
+    }
+  }
+
+  &.landscape {
+    height: 216px;
+    width: 384px;
+
+    .rating {
+      top: 0.5rem;
+      left: 0.5rem;
+    }
+
+    .title {
+      font-size: 1.1rem;
+    }
+
+    .date {
+      margin-top: 0.25rem;
+      font-size: 0.8rem;
+    }
+
+    & .movie-image-load-indicator .spinner {
+      transform: scale(0.5) translateY(-64px);
+    }
+  }
 
   &-content {
     position: relative;
     height: 100%;
     display: block;
     overflow: hidden;
-    background-size: cover;
-    background-position: center;
-    transition: background-size 0.3s ease-out;
 
     &:hover {
       & .movie-card-placeholder p {
@@ -27,6 +77,7 @@
         opacity: 1;
         pointer-events: all;
 
+        & .movie-card-button,
         & .rating,
         & .title,
         & .date {
@@ -35,6 +86,10 @@
 
         & .rating {
           transform: translateX(0) rotate(0deg);
+        }
+
+        & .movie-card-button {
+          transform: scale(1);
         }
 
         & .title,
@@ -60,6 +115,8 @@
 .movie-image-load-indicator {
   position: absolute;
   inset: 0;
+  display: flex;
+  justify-content: center;
   opacity: 1;
   transition: opacity 0.2s ease-out;
 
@@ -77,6 +134,10 @@
   align-items: center;
   padding: 2rem 1rem;
   border: 1px solid var(--movie-card-placeholder-text-color);
+  background: radial-gradient(
+    var(--movie-card-gradient-color-01),
+    var(--movie-card-gradient-color-02)
+  );
   color: var(--movie-card-placeholder-text-color);
 
   & p {
@@ -93,8 +154,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1.5rem;
-  background: linear-gradient(to bottom, rgba(88, 58, 58, 0.65) 0%, rgba(0, 0, 0, 0.95) 100%);
+  padding: 2rem;
+  // background: linear-gradient(to bottom, rgba(88, 58, 58, 0.65) 0%, rgba(0, 0, 0, 0.95) 100%);
+  background: var(--movie-card-overlay-background);
   color: var(--movie-card-overlay-text-color);
   text-align: center;
   pointer-events: none;
@@ -113,19 +175,41 @@
   }
 
   .title {
-    font-size: 1.5rem;
     font-weight: 200;
     opacity: 0;
     transform: translateY(-3rem);
     transition: transform 0.25s ease, opacity 0.25s ease;
+
+    font-size: 1.2rem;
   }
 
   .date {
-    margin-top: 1rem;
-    font-size: 1rem;
     font-weight: 500;
     opacity: 0;
     transform: translateY(2rem);
     transition: transform 0.25s ease 0.125s, opacity 0.25s ease 0.125s;
+
+    margin-top: 0.25rem;
+    font-size: 0.8rem;
+  }
+
+  .movie-card-button {
+    margin-top: 1rem;
+    border: 2px solid var(--movie-card-overlay-text-color);
+    border-radius: 1rem;
+    padding: 0.25rem 0.75rem;
+    font-size: 0.8rem;
+    background-color: transparent;
+    color: var(--movie-card-overlay-text-color);
+    box-shadow: unset;
+    opacity: 0;
+    transform: scale(0);
+    transition: transform 0.25s ease 0.2s, opacity 0.25s ease 0.2s, color 0.3s ease,
+      background-color 0.3s ease;
+
+    &:hover {
+      background-color: var(--movie-card-overlay-text-color);
+      color: var(--movie-card-overlay-contrast-color);
+    }
   }
 }
