--- a/client/src/components/MovieCard.scss
+++ b/client/src/components/MovieCard.scss
@@ -29,12 +29,22 @@
       left: 1.25rem;
     }
 
+    .favorite {
+      bottom: 1.25rem;
+      right: 1.25rem;
+    }
+
     .title {
       font-size: 1.5rem;
     }
 
     .date {
       margin-top: 1rem;
+      font-size: 1rem;
+    }
+
+    .movie-card-button {
+      padding: 0.3rem 1rem;
       font-size: 1rem;
     }
   }
@@ -48,6 +58,11 @@
       left: 0.5rem;
     }
 
+    .favorite {
+      bottom: 0.5rem;
+      right: 0.5rem;
+    }
+
     .title {
       font-size: 1.1rem;
     }
@@ -59,6 +74,11 @@
 
     & .movie-image-load-indicator .spinner {
       transform: scale(0.5) translateY(-64px);
+    }
+
+    .movie-card-button {
+      padding: 0.25rem 0.75rem;
+      font-size: 0.8rem;
     }
   }
 
@@ -79,17 +99,24 @@
 
         & .movie-card-button,
         & .rating,
+        & .favorite,
         & .title,
         & .date {
           opacity: 1;
         }
 
-        & .rating {
+        & .rating,
+        & .favorite {
           transform: translateX(0) rotate(0deg);
         }
 
         & .movie-card-button {
           transform: scale(1);
+
+          &:active {
+            transform: scale(0.9);
+            opacity: 0.9;
+          }
         }
 
         & .title,
@@ -97,11 +124,6 @@
           transform: translateY(0);
         }
       }
-    }
-
-    &:active {
-      transform: scale(0.95);
-      opacity: 0.9;
     }
   }
 
@@ -174,6 +196,15 @@
     transition: transform 0.4s ease 0.2s, opacity 0.4s ease 0.2s;
   }
 
+  .favorite {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    opacity: 0;
+    transform: translateX(-11rem) rotate(-720deg);
+    transition: transform 0.4s ease 0.2s, opacity 0.4s ease 0.2s;
+  }
+
   .title {
     font-weight: 200;
     opacity: 0;
@@ -197,8 +228,8 @@
     margin-top: 1rem;
     border: 2px solid var(--movie-card-overlay-text-color);
     border-radius: 1rem;
-    padding: 0.25rem 0.75rem;
-    font-size: 0.8rem;
+    padding: 0.3rem 1rem;
+    font-size: 1rem;
     background-color: transparent;
     color: var(--movie-card-overlay-text-color);
     box-shadow: unset;
