Create notification snackbar

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -24,6 +24,10 @@
   // --color-dark: rgb(15, 25, 35);
   --color-dark: rgb(10, 15, 25);
   --color-light: rgb(230, 230, 230);
+  --color-success: #5cb85c;
+  --color-info: #5bc0de;
+  --color-warning: #f0ad4e;
+  --color-error: #d9534f;
   --color-primary: rgb(100, 166, 200);
   --color-secondary: rgb(250, 175, 60);
   --color-accent: rgb(190, 5, 185);
