--- a/client/src/components/AuthForm.scss
+++ b/client/src/components/AuthForm.scss
@@ -5,9 +5,8 @@
   --auth-form-background-color: var(--color-dark);
   --auth-form-box-glow: 0 0 5px 5px rgba(210, 245, 235, 0.2);
 
-  max-width: 80vw;
-  width: 30rem;
-  margin: 0 auto;
+  width: clamp(20rem, 30rem, 80vw);
+  margin: 1rem auto;
   padding: 5rem;
   border: 1px solid var(--auth-form-main-color);
   opacity: 0.8;
@@ -68,6 +67,13 @@
   &:focus {
     background-color: var(--auth-form-accent-color);
     box-shadow: var(--auth-form-box-glow);
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.1;
+    background-color: var(--auth-form-main-color);
+    box-shadow: none;
   }
 }
 
