Multiple minor color corrections

--- a/client/src/components/common/SearchBar.scss
+++ b/client/src/components/common/SearchBar.scss
@@ -79,7 +79,7 @@
       pointer-events: all;
       cursor: pointer;
       opacity: 1;
-      filter: invert(100%);
+      // filter: invert(100%);
     }
 
     & + svg {
