--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -26,7 +26,7 @@
   --color-light: rgb(230, 230, 230);
   --color-success: #5cb85c;
   --color-info: #5bc0de;
-  --color-warning: #f0ad4e;
+  --color-warning: rgb(250, 175, 60);
   --color-error: #d9534f;
   --color-primary: rgb(100, 166, 200);
   --color-secondary: rgb(250, 175, 60);
