--- a/client/src/components/common/notifications/NotificationItem.scss
+++ b/client/src/components/common/notifications/NotificationItem.scss
@@ -9,10 +9,10 @@
 
   position: relative;
   display: grid;
-  column-gap: 0.75rem;
+  column-gap: 1rem;
   grid-template-areas: 'icon content';
   grid-template-columns: 2rem 18rem;
-  padding: 0.75rem 2rem 0.75rem 0.75rem;
+  padding: 1rem 3rem 1rem 1rem;
   overflow: hidden;
   border-radius: 0.2rem;
   box-shadow: 0 0 0.7rem var(--notification-box-shadow-color);
@@ -57,10 +57,11 @@
 .notification-message {
   width: 100%;
   margin: 0;
-  text-align: left;
+  text-align: justify;
   // overflow: hidden;
   // text-overflow: ellipsis;
   // white-space: nowrap;
+  word-wrap: break-word;
   font-size: 0.875rem;
 }
 
