--- a/client/src/components/common/Modal.scss
+++ b/client/src/components/common/Modal.scss
@@ -36,8 +36,8 @@
 
 .modal-content {
   position: fixed;
-  height: clamp(260px, 80vw, 900px);
-  width: clamp(260px, 80vw, 900px);
+  height: clamp(260px, 80vmin, 900px);
+  width: clamp(260px, 80vmin, 900px);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
