--- a/client/src/components/pages/PageContainer.scss
+++ b/client/src/components/pages/PageContainer.scss
@@ -8,4 +8,7 @@
   overflow-y: auto;
   text-align: center;
   color: var(--page-text-color);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
