--- a/client/src/components/AuthForm.scss
+++ b/client/src/components/AuthForm.scss
@@ -54,7 +54,6 @@
     outline: none;
     border: 1px solid var(--auth-form-accent-color);
     box-shadow: 0 0 1rem var(--auth-form-accent-color);
-    color: var(--auth-form-accent-color);
     animation: inputGlow 0.8s ease-out infinite alternate;
   }
 }
@@ -89,11 +88,25 @@
     box-shadow: var(--auth-form-box-glow);
   }
 
+  &:focus {
+    outline: none;
+    animation: submitButtonGlow 0.8s ease-out infinite alternate;
+  }
+
   &:disabled {
     cursor: not-allowed;
     opacity: 0.1;
     background-color: var(--auth-form-main-color);
     box-shadow: none;
+  }
+}
+
+@keyframes submitButtonGlow {
+  0% {
+    box-shadow: 0 0 0.25rem rgba(var(--auth-form-accent-rgb), 0.5);
+  }
+  100% {
+    box-shadow: 0 0 1rem rgba(var(--auth-form-accent-rgb), 1);
   }
 }
 
