Make user login icon a semantic button

--- a/client/src/components/Header.scss
+++ b/client/src/components/Header.scss
@@ -40,6 +40,8 @@
     width: var(--user-icon-size);
     min-width: var(--user-icon-size);
     z-index: 1;
+    background-color: transparent;
+    border: none;
     cursor: pointer;
 
     & svg {
